Fixed dark mode switch overflowing navbar

--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,9 @@
 		max-width: 640px;
 	}
 }
-@media (min-width: 768px) {
+@media (min-width: 850px) {
 	.container {
-		max-width: 768px;
+		max-width: 850px;
 	}
 }
 @media (min-width: 1024px) {
